--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html,
-body {
-  background-color: #1c2541;
+
+html {
+  background-color: #1C2541;
 }
