--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+* {
+  margin: 0;
+  padding: 0;
+}
 html {
   background-color: #1C2541;
 }
