--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lato:wght@400;700;900&display=swap');
 * {
   margin: 0;
   padding: 0;
+
 }
 html {
-  background-color: #1C2541;
+  background-color: #312e81;
+  color: #60a5fa;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 64px;
 }
