added spacing/font reference

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lato:wght@400;700;900&display=swap');
+
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
+
 * {
   margin: 0;
   padding: 0;
 
 }
 html {
-  background-color: #312e81;
-  color: #60a5fa;
+  background-color: #3730a3;
+  color: #94a3b8;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 64px;
